; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcpim.c___bfa_cb_ioim_abort.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcpim.c___bfa_cb_ioim_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_ioim_s = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@BFA_IOIM_SM_HCB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @__bfa_cb_ioim_abort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__bfa_cb_ioim_abort(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bfa_ioim_s*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.bfa_ioim_s*
  store %struct.bfa_ioim_s* %7, %struct.bfa_ioim_s** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %14, label %10

10:                                               ; preds = %2
  %11 = load %struct.bfa_ioim_s*, %struct.bfa_ioim_s** %5, align 8
  %12 = load i32, i32* @BFA_IOIM_SM_HCB, align 4
  %13 = call i32 @bfa_sm_send_event(%struct.bfa_ioim_s* %11, i32 %12)
  br label %24

14:                                               ; preds = %2
  %15 = load %struct.bfa_ioim_s*, %struct.bfa_ioim_s** %5, align 8
  %16 = getelementptr inbounds %struct.bfa_ioim_s, %struct.bfa_ioim_s* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.bfa_ioim_s*, %struct.bfa_ioim_s** %5, align 8
  %21 = getelementptr inbounds %struct.bfa_ioim_s, %struct.bfa_ioim_s* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @bfa_cb_ioim_abort(i32 %19, i32 %22)
  br label %24

24:                                               ; preds = %14, %10
  ret void
}

declare dso_local i32 @bfa_sm_send_event(%struct.bfa_ioim_s*, i32) #1

declare dso_local i32 @bfa_cb_ioim_abort(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
